--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <meta charset="utf-8" />
  <link rel="stylesheet" href="css/styles.css" />
  <title>Web GIS</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"/>
  </head>
  <body>
    <div> <img src="img/banner.jpeg" alt="banner" width="100%" height="auto"> <div>
@@ -18,6 +19,8 @@
      <div class="container">
        <div class="map-container" id="map"> </div>
      </div>
+        <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
+        <script src="js/javascript.js"></script>
      <footer class="prop" > &copy Ademi Kundybayeva, Tartu University, 2022 <footer>
  </body>
 </html>
