--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
        <h1> Web GIS Application <h1>
      </div>
      <div class="container">
+      <button onclick="defaultMapSettings()">Default view</button>
        <div class="map-container" id="map"> </div>
      </div>
         <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
         <script src="js/javascript.js"></script>
+        <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
      <footer class="prop" > &copy Ademi Kundybayeva, Tartu University, 2022 <footer>
  </body>
 </html>
