--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <nav>
        <a href="index.html" class="active">Basic Map</a>
        <a href="#">Choropleth Map</a>
-       <a href="#">Heatmap</a>
+       <a href="heatmap.html">Heatmap</a>
      </nav>
      <div class="title">
        <h1> Web GIS Application <h1>
