--- a/heatmap.html
+++ b/heatmap.html
@@ -11,9 +11,9 @@
   <body>
     <div> <img src="img/banner.jpeg" alt="banner" width="100%" height="auto"> <div>
       <nav>
-        <a href="index.html" class="active">Basic Map</a>
+        <a href="index.html">Basic Map</a>
         <a href="#">Choropleth Map</a>
-        <a href="#">Heatmap</a>
+        <a href="heatmap.html" class="active">Heatmap</a>
       </nav>
       <div class="title">
         <h1> Web GIS Application <h1>
