--- a/heatmap.html
+++ b/heatmap.html
@@ -5,8 +5,6 @@
     <link rel="stylesheet" href="css/styles.css" />
     <title>Heatmap</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" /> 
   </head>
   <body>
     <div> <img src="img/banner.jpeg" alt="banner" width="100%" height="auto"> <div>
@@ -23,8 +21,8 @@
             <div class="map-container" id="map"> </div>
           </div>
           <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
-          <script src="js/javascript.js"></script>
-          <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
+          <script src="https://cdn.jsdelivr.net/npm/leaflet.heat@0.2.0/dist/leaflet-heat.min.js"></script>
+          <script src="js/heatmap.js"></script>
           <footer class="prop" > &copy Ademi Kundybayeva, Tartu University, 2022 <footer>
             </body>
             </html>
