--- a/heatmap.html
+++ b/heatmap.html
@@ -14,7 +14,7 @@
         <a href="heatmap.html" class="active">Heatmap</a>
       </nav>
       <div class="title">
-        <h1> Web GIS Application <h1>
+        <h1> Heatmap <h1>
           </div>
           <div class="container">
             <button onclick="defaultMapSettings()">Default view</button>
