--- a/choroplethmap.html
+++ b/choroplethmap.html
@@ -10,7 +10,7 @@
     <div> <img src="img/banner.jpeg" alt="banner" width="100%" height="auto"> <div>
       <nav>
         <a href="index.html">Basic Map</a>
-        <a href="choropleth.html" class="active">Choropleth Map</a>
+        <a href="choroplethmap.html" class="active">Choropleth Map</a>
         <a href="heatmap.html">Heatmap</a>
       </nav>
       <div class="title">
@@ -21,8 +21,8 @@
             <div class="map-container" id="map"> </div>
           </div>
           <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
-          <script src="https://cdn.jsdelivr.net/npm/leaflet.heat@0.2.0/dist/leaflet-heat.min.js"></script>
-          <script src="js/heatmap.js"></script>
+          <script src="https://cdn.jsdelivr.net/npm/leaflet-choropleth@1.1.4/dist/choropleth.js"></script>
+          <script src="js/choroplethmap.js"></script>
           <footer class="prop" > &copy Ademi Kundybayeva, Tartu University, 2022 <footer>
             </body>
             </html>
