--- a/choroplethmap.html
+++ b/choroplethmap.html
@@ -14,7 +14,7 @@
         <a href="heatmap.html">Heatmap</a>
       </nav>
       <div class="title">
-        <h1> Heatmap <h1>
+        <h1> Choropleth map <h1>
           </div>
           <div class="container">
             <button onclick="defaultMapSettings()">Default view</button>
