--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <div> <img src="img/banner.jpeg" alt="banner" width="100%" height="auto"> <div>
      <nav>
        <a href="index.html" class="active">Basic Map</a>
-       <a href="#">Choropleth Map</a>
+       <a href="choroplethmap.html">Choropleth Map</a>
        <a href="heatmap.html">Heatmap</a>
      </nav>
      <div class="title">
