--- a/heatmap.html
+++ b/heatmap.html
@@ -10,7 +10,7 @@
     <div> <img src="img/banner.jpeg" alt="banner" width="100%" height="auto"> <div>
       <nav>
         <a href="index.html">Basic Map</a>
-        <a href="#">Choropleth Map</a>
+        <a href="choroplethmap.html">Choropleth Map</a>
         <a href="heatmap.html" class="active">Heatmap</a>
       </nav>
       <div class="title">
